[project]
name = "nelp"
version = "0.1.0"
description = "nlp etymo thing"
authors = [
    {name = "dante"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "groq (>=0.36.0,<0.37.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
